<resources>
    <string name="main_title">Elva</string>
    <string name="setting">Settings</string>
    <string name="no_more_than_chars">No more than %s chars!</string>
    <string name="no_png_upload">SD card does not exist or can not be written!</string>
    <string name="goto_Elva">Contact Us</string>
    <string name="self_service_interface">Self-Service</string>
    <string name="break_off_remind">Your network is disconnected,please try again later</string>
	<string name="ab_op_help">HELP</string>
    <string name="mark_helpful_toast">You found this helpful</string>
    <string name="mark_no">NO</string>
    <string name="mark_unhelpful_toast">You didn\'t find this helpful</string>
    <string name="mark_yes">YES</string>
    <string name="mark_yes_no_question">Was this helpful?</string>
    <string name="permission_denied_message">Storage permission is required to upload picture</string>
    <string name="question">your question</string>
    <string name="like_it">Loved it!</string>
    <string name="hate_it">Disliked it!</string>
    <string name="ab_reward_your_points">Your tokens:</string>
    <string name="ab_reward_points"> </string>
    <string name="ab_reward_go_to_the">Go to the</string>
    <string name="ab_reward_qa_community">QA Forum</string>
    <string name="ab_reward_earn_points">Earn tokens~</string>
    <string name="ab_reward_success">Success</string>
    <string name="ab_reward_failed">Failed</string>
    <string name="ab_reward_your_points_is_insufficient">Your tokens is insufficient</string>
    <string name="ab_faq_need_more_help">Need more help?</string>
    <string name="ab_search_faq_no_found">Oops,no relevant results were found</string>
    <string name="ab_alert_success">Success</string>
    <string name="ab_alert_fail">Failed</string>
    <string name="ab_feedback_title">Please tell us more details</string>
</resources>
