<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ab_btn_white_shape"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="right">

            <ImageView
                android:id="@+id/iv_reward_close"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/aihelp_clear" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/ab_reward_your_points"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_reward_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_reward_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/ab_reward_points"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/ab_reward_go_to_the"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_reward_qa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/ab_reward_qa_community"
                android:textColor="#FF0000" />

            <TextView
                android:id="@+id/tv_reward_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_reward_one"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/ab_btn_gray_shape"
                android:gravity="center"
                android:text="0"
                android:textColor="#BFBFBF" />

            <TextView
                android:id="@+id/tv_reward_two"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/ab_btn_gray_shape"
                android:gravity="center"
                android:text="0"
                android:textColor="#BFBFBF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_reward_three"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/ab_btn_gray_shape"
                android:gravity="center"
                android:text="0"
                android:textColor="#BFBFBF" />

            <TextView
                android:id="@+id/tv_reward_four"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/ab_btn_gray_shape"
                android:gravity="center"
                android:text="0"
                android:textColor="#BFBFBF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/ib_reward_ok"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/evaluate_submit_gray" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>