<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autoMirrored="true"
        android:background="#000000"
        android:clickable="true">

        <RelativeLayout
            android:id="@+id/rl_ab_qa_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:onClick="onBackArrowClick">

            <ImageButton
                android:id="@+id/ab__btn_back"
                android:layout_width="12dp"
                android:layout_height="22dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="50dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/backrow_auto_mirrored"
                android:clickable="false" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_faq_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/rl_ab_qa_back"
            android:text="AIHELP"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_faq_conversation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onConversationShowClick"
                android:text="@string/goto_Elva"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ab_faq_webview_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_centerVertical="true"
                android:background="@drawable/aihelp_close" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_faq_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:visibility="gone"
        android:focusableInTouchMode="true"
        android:minHeight="50dp">

        <LinearLayout
            android:id="@+id/ll_faq_search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="onSearchClick"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/aihelp_search" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_faq_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/ll_faq_search_icon"
            android:layout_toLeftOf="@+id/iv_faq_search_clear"
            android:layout_toStartOf="@+id/iv_faq_search_clear"
            android:layout_toRightOf="@+id/ll_faq_search_icon"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/transparent"
            android:hint="@string/question"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="#ff000000"
            android:textDirection="locale"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_faq_search_clear"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginRight="10dp"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:onClick="onSearchClearClick"
            android:visibility="gone"
            android:background="@drawable/aihelp_clear"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:id="@+id/ab__faq_list_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ab__faq_question_footer">

            <ListView
                android:id="@+id/ab__faq_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ab__faq_web_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ab__faq_question_footer"
            android:background="@drawable/ecs_text_bg_1">

            <WebView
                android:id="@+id/ab__faq_web_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/ab__faq_progressbar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="visible" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ab__faq_question_footer"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_above="@+id/ab__faq_bottom_area"
            android:background="#f7f7f7"
            android:orientation="vertical"
            android:visibility="visible">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C0C0C0" />

            <LinearLayout
                android:id="@+id/ll_faq_help_left"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:paddingTop="3dp">

                <TextView
                    android:id="@+id/ab__faq_question_footer_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/mark_yes_no_question"
                    android:textColor="#aa000000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/ab__faq_unhelpful_button"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/mark_no"
                    android:textColor="#FF0000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/ab__faq_helpful_button"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/mark_yes"
                    android:textColor="#FF0000"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_faq_help_right"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:paddingTop="3dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_faq_helpful_r"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/mark_yes"
                    android:textColor="#FF0000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_faq_unhelpful_r"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/mark_no"
                    android:textColor="#FF0000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_faq_question_message_r"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/mark_yes_no_question"
                    android:textColor="#aa000000"
                    android:textDirection="anyRtl"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/ab__faq_bottom_area"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_alignParentBottom="true"
            android:background="#000000"
            android:focusable="true">

            <RelativeLayout
                android:id="@+id/ab__faq_power"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal">

                <TextView
                    android:id="@+id/ab__faq_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="3dp"
                    android:autoText="false"
                    android:text="Powered by AIHELP.NET"
                    android:textColor="#ffffff"
                    android:textSize="8dp" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
