<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:id="@+id/ab__faq_list_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ab__faq_question_footer">

            <ListView
                android:id="@+id/ab__faq_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ab__faq_web_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ab__faq_question_footer"
            android:background="@drawable/ecs_text_bg_1">

            <com.tencent.smtt.sdk.WebView
                android:id="@+id/ab__faq_web_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/ab__faq_progressbar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="visible" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ab__faq_question_footer"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_above="@+id/ab__msg_bottom_area"
            android:background="#f7f7f7"
            android:orientation="vertical"
            android:visibility="visible">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C0C0C0" />

            <LinearLayout
                android:id="@+id/ll_faq_help_left"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:paddingTop="3dp">

                <TextView
                    android:id="@+id/ab__faq_question_footer_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/mark_yes_no_question"
                    android:textColor="#aa000000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/ab__faq_unhelpful_button"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/mark_no"
                    android:textColor="#FF0000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/ab__faq_helpful_button"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/mark_yes"
                    android:textColor="#FF0000"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_faq_help_right"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:paddingTop="3dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_faq_helpful_r"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/mark_yes"
                    android:textColor="#FF0000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_faq_unhelpful_r"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/mark_no"
                    android:textColor="#FF0000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_faq_question_message_r"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/mark_yes_no_question"
                    android:textColor="#aa000000"
                    android:textDirection="anyRtl"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/ab__msg_bottom_area"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_alignParentBottom="true"
            android:background="#000000"
            android:focusable="true">

            <RelativeLayout
                android:id="@+id/ab__faq_power"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal">

                <TextView
                    android:id="@+id/ab__faq_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="3dp"
                    android:autoText="false"
                    android:text="Powered by AIHELP.NET"
                    android:textColor="#ffffff"
                    android:textSize="8dp" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
